--- a/front-end/categoria-owme/package.json
+++ b/front-end/categoria-owme/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "Página de listagem de produtos.",
   "scripts": {
-    "server": "http-server -p 9000",
+    "server": "http-server -p 3000",
     "build": "gulp build"
   },
   "author": "Adriano Gall",
@@ -16,6 +16,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-rename": "1.2.2",
+		"gulp-wrap": "^0.14.0",
+    "http-server": "^0.11.1"
   }
 }
