--- a/front-end/categoria-owme/package.json
+++ b/front-end/categoria-owme/package.json
@@ -3,24 +3,29 @@
   "version": "1.0.1",
   "description": "Página de listagem de produtos.",
   "scripts": {
-    "server": "http-server -p 3000",
+    "dev": "gulp dev",
     "build": "gulp build"
   },
   "author": "Adriano Gall",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-minify": "^3.1.0",
     "gulp-watch": "^5.0.1"
   },
   "dependencies": {
+    "del": "^5.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
-    "gulp-sass": "^4.0.2",
     "gulp-plumber": "^1.1.0",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-uglify": "^3.0.0",
     "gulp-rename": "1.2.2",
-		"gulp-wrap": "^0.14.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-wrap": "^0.14.0",
     "http-server": "^0.11.1"
   }
 }
